--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <p>Matchaé by Lipton, c'est un savoureux mélange de gourmandise et de savoir-faire japonais. Y goûter, c'est l'adopter !</p>
     <a href="https://www.lipton.com/fr/" target="_blank" class="btn-green">Nouveauté Lipton</a>
   </div>
-    
-  <div class=""container">
-    <div class="text">
-      Pour les commandes supérieurs à 30€, la livraison est offerte
-    </div>
-  </div>
 
 <div class="container">
   <h2>Découvrez notre nouvelle collection</h2>
   <!-- Cards container -->
   <div class=""cards">
 
+ <div class="container">
+      <div class="anim-text">
+        Pour les commandes supérieurs à 30€, la livraison est offerte
+      </div>
+    </div>
+    
     <!-- Le Prestigieux - Matcha Cérémonie Bio -->
     <div class="card-green">
       <img src="images/prestigieux.jpg" alt="">
