--- a/index.html
+++ b/index.html
@@ -20,41 +20,42 @@
 <div class="container">
   <h2>Découvrez notre nouvelle collection</h2>
   <!-- Cards container -->
-  <div class=""cards">
 
- <div class="container">
-      <div class="anim-text">
-        Pour les commandes supérieurs à 30€, la livraison est offerte
-      </div>
-    </div>
-    
-    <!-- Le Prestigieux - Matcha Cérémonie Bio -->
-    <div class="card-green">
-      <img src="images/prestigieux.jpg" alt="">
-      <h3>LE Prestigieux</h3>
-      <p>Matcha Cérémonio Bio</p>
-      <a href="https://www.universpara.com/blog/le-the-matcha-et-la-ceremonie-du-the-au-japon/#:~:text=Aussi%20appelée%20Chanoyu%2C%20la%20cérémonie,ainsi%20préparé%2C%20une%20autre%20dimension." target="_blank" class="btn-green">Son Histoire</a>
-    </div>
-
-    <!-- L'Enchanteur - Matcha Cérémonie -->
-    <div class="card-green">
-      <img src="images/enchanteur.jpg" alt="">
-      <h3>L'Enchanteur</h3>
-      <p>Matcha Cérémonie</p>
-      <a href="https://chabiothe.fr/content/70-the-matcha-comment-bien-le-preparer" target="_blank" class="btn-green">Comment préparer son matcha ?</a>
-    </div>
-    </div>
-
-    <!-- L'Authentique - Matcha Premium BIO -->
-    <div class="card-green">
-      <img src="images/premium.jpg" alt="">
-      <h3>L'Authentique</h3>
-      <p>Matcha Premium BIO</p>
-      <a href="https://madame.lefigaro.fr/recettes/cake-the-vert-matcha-200911-200124" target="_blank" class="btn-green">Découvrez quelques idées de recettes !</a>
-    </div>
+  <div class="container">
+    <div class="anim-text">
+      Pour les commandes supérieurs à 30€, la livraison est offerte
     </div>
   </div>
-</div>
+
+    <div class="cards">
+
+
+       <!-- Le Prestigieux - Matcha Cérémonie Bio -->
+       <div class="card-green">
+          <img src="images/prestigieux.jpg" alt="">
+          <h3>LE Prestigieux</h3>
+          <p>Matcha Cérémonio Bio</p>
+          <a href="https://www.universpara.com/blog/le-the-matcha-et-la-ceremonie-du-the-au-japon/#:~:text=Aussi%20appelée%20Chanoyu%2C%20la%20cérémonie,ainsi%20préparé%2C%20une%20autre%20dimension." target="_blank" class="btn-green">Son Histoire</a>
+        </div>
+
+       <!-- L'Enchanteur - Matcha Cérémonie -->
+       <div class="card-green">
+          <img src="images/enchanteur.jpg" alt="">
+          <h3>L'Enchanteur</h3>
+          <p>Matcha Cérémonie</p>
+          <a href="https://chabiothe.fr/content/70-the-matcha-comment-bien-le-preparer" target="_blank" class="btn-green">Comment préparer son matcha ?</a>
+        </div>
+  
+       <!-- L'Authentique - Matcha Premium BIO -->
+       <div class="card-green">
+          <img src="images/premium.jpg" alt="">
+          <h3>L'Authentique</h3>
+          <p>Matcha Premium BIO</p>
+          <a href="https://madame.lefigaro.fr/recettes/cake-the-vert-matcha-200911-200124" target="_blank" class="btn-green">Découvrez quelques idées de recettes !</a>
+        </div>
+      </div>
+   </div>
+
 
   <!-- Footer section -->
   <div class="footer">
