--- a/index.html
+++ b/index.html
@@ -1,69 +1,61 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Matchaé - La Nouvelle Experience Matcha !</title>
-
-  <!-- Change these Google fonts with your own choice -->
-  <link href="https://fonts.googleapis.com/css?family=Chivo:700|Overpass:400,700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Matchaé - La Nouvelle Experience Matcha !</title>
+<link rel="icon" href="images/icon.jpg" type="image/x-icon">
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <!-- Banner section -->
-  <div class="banner">
-    <h1>La Nouvelle Experience Matcha.</h1>
-    <p>Matchaé by Lipton, c'est un savoureux mélange de gourmandise et de savoir-faire japonais. Y goûter, c'est l'adopter !</p>
-    <a href="https://www.lipton.com/fr/" target="_blank" class="btn-green">Nouveauté Lipton</a>
-  </div>
+<!-- Banner section -->
+<div class="banner">
+   <h1>La Nouvelle Experience Matcha.</h1>
+   <p>Matchaé by Lipton, c'est un savoureux mélange de gourmandise et de savoir-faire japonais. Y goûter, c'est l'adopter !</p>
+   <a href="https://www.lipton.com/fr/" target="_blank" class="btn-green">Nouveauté Lipton</a>
+</div>
 
 <div class="container">
-  <h2>Découvrez notre nouvelle collection</h2>
-  <!-- Cards container -->
+   <h2>Découvrez notre nouvelle collection</h2>
+   <!-- Cards container -->
 
-  <div class="container">
-    <div class="anim-text">
-      Pour les commandes supérieurs à 30€, la livraison est offerte
-    </div>
-  </div>
-
-    <div class="cards">
-
-
-       <!-- Le Prestigieux - Matcha Cérémonie Bio -->
-       <div class="card-green">
-          <img src="images/prestigieux.jpg" alt="">
-          <h3>LE Prestigieux</h3>
-          <p>Matcha Cérémonio Bio</p>
-          <a href="https://www.universpara.com/blog/le-the-matcha-et-la-ceremonie-du-the-au-japon/#:~:text=Aussi%20appelée%20Chanoyu%2C%20la%20cérémonie,ainsi%20préparé%2C%20une%20autre%20dimension." target="_blank" class="btn-green">Son Histoire</a>
-        </div>
-
-       <!-- L'Enchanteur - Matcha Cérémonie -->
-       <div class="card-green">
-          <img src="images/enchanteur.jpg" alt="">
-          <h3>L'Enchanteur</h3>
-          <p>Matcha Cérémonie</p>
-          <a href="https://chabiothe.fr/content/70-the-matcha-comment-bien-le-preparer" target="_blank" class="btn-green">Comment préparer son matcha ?</a>
-        </div>
-  
-       <!-- L'Authentique - Matcha Premium BIO -->
-       <div class="card-green">
-          <img src="images/premium.jpg" alt="">
-          <h3>L'Authentique</h3>
-          <p>Matcha Premium BIO</p>
-          <a href="https://madame.lefigaro.fr/recettes/cake-the-vert-matcha-200911-200124" target="_blank" class="btn-green">Découvrez quelques idées de recettes !</a>
-        </div>
-      </div>
+   <div class="anim-text">
+      Pour les commandes supérieures à 30€, la livraison est offerte
    </div>
 
+   <div class="cards">
+      <!-- Le Prestigieux - Matcha Cérémonie Bio -->
+      <div class="card-green">
+         <img src="images/prestigieux.jpg">
+         <h3>Le Prestigieux</h3>
+         <p>Matcha Cérémonio Bio</p>
+         <a href="https://www.universpara.com/blog/le-the-matcha-et-la-ceremonie-du-the-au-japon/#:~:text=Aussi%20appelée%20Chanoyu%2C%20la%20cérémonie,ainsi%20préparé%2C%20une%20autre%20dimension." target="_blank" class="btn-green">Son Histoire</a>
+      </div>
 
-  <!-- Footer section -->
-  <div class="footer">
-  <div class="container">
-    <p>Rejoins la communaute Matchaé By Lipton sur Instagram pour suivre nos actualités</p>
-  </div>
- </div>
+      <!-- L'Enchanteur - Matcha Cérémonie -->
+      <div class="card-green">
+         <img src="images/enchanteur.jpg">
+         <h3>L'Enchanteur</h3>
+         <p>Matcha Cérémonie</p>
+         <a href="https://chabiothe.fr/content/70-the-matcha-comment-bien-le-preparer" target="_blank" class="btn-green">Comment préparer son matcha ?</a>
+      </div>
 
- <script> </script>
+      <!-- L'Authentique - Matcha Premium BIO -->
+      <div class="card-green">
+         <img src="images/premium.jpg">
+         <h3>L'Authentique</h3>
+         <p>Matcha Premium BIO</p>
+         <a href="https://madame.lefigaro.fr/recettes/cake-the-vert-matcha-200911-200124" target="_blank" class="btn-green">Découvrez quelques idées de recettes !</a>
+      </div>
+   </div>
+</div>
+<!-- Footer section -->
+<div class="footer">
+   <div class="container">
+      <h2>Rejoins la communauté Matchaé By Lipton sur Instagram pour suivre nos actualités</h2>
+   </div>
+</div>
+
 </body>
 </html>
